# cm-pixel-gui

./: .gitignore  LICENSE  PLAN.md  README.md  index.html  package.json  pnpm-lock.yaml  tsconfig.json  vite.config.ts
.github/workflows/: ci.yml  release.yml
reference/: PROTOCOL.md  layout.json  python_animations.py  python_device.py  python_font.py  python_rubik.py
src/: App.svelte
src-tauri/: Cargo.toml  tauri.conf.json
src-tauri/capabilities/: default.json
src-tauri/icons/: icon.icns
src-tauri/src/: canvas.rs  commands.rs  config.rs  device.rs  engine.rs  layout.rs  main.rs  tray.rs
src-tauri/src/anim/: icecube.rs  media.rs  mod.rs  procedural.rs  rubik.rs  soccer.rs  text.rs
src/lib/: HexPreview.svelte  ZoomPanPreview.svelte  api.ts
src/lib/controls/: AnimControl.svelte  MediaControl.svelte  SettingsControl.svelte  SolidControl.svelte  TextControl.svelte
